infra/k8s/nats.depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
    name: nats-depl
spec:
    replicas: 1
    selector: 
        matchLabels: 
            app: nats
    template:
        metadata: 
            labels: 
                app: nats
        spec:
            containers: 
                - name: nats 
                  image: nats-streaming:0.17.0 
                  ## args provides arguments to the primary
                  ## cmd executed when container starts 
                  args: [
                    '--port', '4222',
                    '--http_port', '8222',
                    '--hb_interval', '5s',      ## heart beat : healthcheck every 5 seconds 
                    '--hb_timeout', '5s',       ## how long it will wait for response from client 
                    '--hb_fail_count', '2',     ## how many fail request before considering it to be down
                    '--stan_debug', 
                    '--cluster_id', 'ticketing'
                  ]
---
apiVersion: v1
kind: Service 
metadata:
    name: nats-srv 
spec: 
    type: ClusterIP
    selector: 
        app: nats 
    ports: 
        - name: client 
          protocol: TCP 
          port: 4222 
          targetPort: 4222 
        - name: monitoring 
          protocol: TCP 
          port: 8222 
          targetPort: 8222
