infra/k8s/orders-mongo.depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
    name: orders-mongo-depl 
spec: 
    replicas: 1 
    selector: 
        matchLabels: 
            app: orders-mongo 
    template: 
        metadata: 
            labels: 
                app: orders-mongo 
        spec: 
            containers: 
                - name: orders-mongo 
                  image: mongo 
---
apiVersion: v1
kind: Service 
metadata: 
    name: orders-mongo-srv 
spec: 
    type: ClusterIP
    selector: 
        app: orders-mongo 
    ports: 
        - name: db 
          protocol: TCP 
          port: 27017 
          targetPort: 27017
